--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -11,8 +11,8 @@
 	<link rel="manifest" href="/manifest/manifest.json">
 
 	<link rel="stylesheet" href="/css/lib/bulma.min.css" />
-	<th:block th:replace="fragments.html::bulma"></th:block>
-	<th:block th:replace="fragments.html::ui-design"></th:block>
+	<th:block th:replace="~{fragments.html::bulma}"></th:block>
+	<th:block th:replace="~{fragments.html::ui-design}"></th:block>
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<title th:text="#{faq.title}"></title>
 </head>
@@ -20,7 +20,7 @@
 <body>
 	<div id="main">
 
-		<header th:insert="fragments.html::header-logged-out"></header>
+		<header th:insert="~{fragments.html::header-logged-out}"></header>
 		<div class="section">
 			<div class="box" id="privacy">
 				<p class="title is-4" th:text="#{faq.privacy.question}"></p>
@@ -48,7 +48,7 @@
 			</div>
 		</div>
 	</div>
-	<footer th:replace="fragments.html::footer"></footer>
+	<footer th:replace="~{fragments.html::footer}"></footer>
 
 	<script src="/sw.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
