--- a/src/main/resources/templates/password-reset.html
+++ b/src/main/resources/templates/password-reset.html
@@ -10,15 +10,15 @@
 	<link rel="manifest" href="/manifest/manifest.json">
 	
 	<link rel="stylesheet" href="/css/lib/bulma.min.css" />
-	<th:block th:replace="fragments.html::bulma"></th:block>
-	<th:block th:replace="fragments.html::ui-design"></th:block>
+	<th:block th:replace="~{fragments.html::bulma}"></th:block>
+	<th:block th:replace="~{fragments.html::ui-design}"></th:block>
 	<link rel="stylesheet" href="/css/lib/animate.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<title th:text="#{password-reset.title}"></title>
 </head>
 <body>
 	<div id="main">
-		<header th:insert="fragments.html::header-logged-out"></header>
+		<header th:insert="~{fragments.html::header-logged-out}"></header>
 		<div class="section">
 			<div class="container">
 				<div class="column">
@@ -31,7 +31,7 @@
 									<input class="input" type="email" autofocus="" name="email" id="email" required>
 								</div>
 							</div>
-							<div th:replace="fragments.html::captcha"></div>
+							<div th:replace="~{fragments.html::captcha}"></div>
 							<button class="button is-info colored" th:text="#{submit}"></button>
 						</form>
 					</div>
@@ -40,7 +40,7 @@
 		</div>
 	</div>
 
-	<footer th:replace="fragments.html::footer"></footer>
+	<footer th:replace="~{fragments.html::footer}"></footer>
 
 	<script src="/sw.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
