--- a/src/main/resources/templates/delete-account.html
+++ b/src/main/resources/templates/delete-account.html
@@ -11,8 +11,8 @@
     <link href="/manifest/manifest.json" rel="manifest">
 
     <link href="/css/lib/bulma.min.css" rel="stylesheet"/>
-    <th:block th:replace="fragments.html::bulma"></th:block>
-    <th:block th:replace="fragments.html::ui-design"></th:block>
+    <th:block th:replace="~{fragments.html::bulma}"></th:block>
+    <th:block th:replace="~{fragments.html::ui-design}"></th:block>
     <link href="/css/lib/bulma-switch.min.css" rel="stylesheet"/>
     <link href="/css/lib/swiper.min.css" rel="stylesheet"/>
     <link href="/css/lib/css-loaders.css" rel="stylesheet"/>
@@ -26,7 +26,7 @@
     <div class="loader" id="preloader"></div>
 </div>
 <div id="main-logged-in">
-    <header th:insert="fragments.html::header-logged-in"></header>
+    <header th:insert="~{fragments.html::header-logged-in}"></header>
 
     <div class="section">
         <div class="container">
@@ -38,7 +38,7 @@
                         <input class="input" name="email" required th:placeholder="#{email}" type="email">
                     </div>
                     <div style="padding-top: 32px;"></div>
-                    <div th:replace="fragments.html::captcha"></div>
+                    <div th:replace="~{fragments.html::captcha}"></div>
                     <div class="field">
                         <input class="switch" id="confirm" name="confirm" required style="position: absolute"
                                type="checkbox"> <label for="confirm"><span th:text="#{delete-account.confirm}"></span>
@@ -58,8 +58,8 @@
     </div>
 
 </div>
-<footer th:replace="fragments.html::navigation"></footer>
-<footer th:replace="fragments.html::footer"></footer>
+<footer th:replace="~{fragments.html::navigation}"></footer>
+<footer th:replace="~{fragments.html::footer}"></footer>
 
 <script src="/sw.js"></script>
 <script src="/js/lib/fontawesome.all.js"></script>
