--- a/src/main/resources/templates/disliked-users.html
+++ b/src/main/resources/templates/disliked-users.html
@@ -11,8 +11,8 @@
     <link href="/manifest/manifest.json" rel="manifest">
 
     <link href="/css/lib/bulma.min.css" rel="stylesheet"/>
-    <th:block th:replace="fragments.html::bulma"></th:block>
-    <th:block th:replace="fragments.html::ui-design"></th:block>
+    <th:block th:replace="~{fragments.html::bulma}"></th:block>
+    <th:block th:replace="~{fragments.html::ui-design}"></th:block>
     <link href="/css/lib/bulma-slider.min.css" rel="stylesheet"/>
     <link href="/css/lib/css-loaders.css" rel="stylesheet"/>
     <link href="/css/lib/modal-fx.min.css" rel="stylesheet"/>
@@ -29,7 +29,7 @@
     <div class="loader" id="preloader"></div>
 </div>
 <div id="main-logged-in">
-    <header th:insert="fragments.html::header-logged-in"></header>
+    <header th:insert="~{fragments.html::header-logged-in}"></header>
     <section class="container" id="main-container">
         <div class="section">
             <div class="container container-narrow" style="width: 100%;">
@@ -61,7 +61,7 @@
 
 <div id="user-profile-container"></div>
 
-<footer th:replace="fragments.html::navigation"></footer>
+<footer th:replace="~{fragments.html::navigation}"></footer>
 
 <script src="/sw.js"></script>
 <script src="/js/lib/fontawesome.all.js"></script>
