--- a/src/main/resources/templates/donate.html
+++ b/src/main/resources/templates/donate.html
@@ -11,8 +11,8 @@
     <link href="/manifest/manifest.json" rel="manifest">
 
     <link href="/css/lib/bulma.min.css" rel="stylesheet"/>
-    <th:block th:replace="fragments.html::bulma"></th:block>
-    <th:block th:replace="fragments.html::ui-design"></th:block>
+    <th:block th:replace="~{fragments.html::bulma}"></th:block>
+    <th:block th:replace="~{fragments.html::ui-design}"></th:block>
     <link href="/css/lib/css-loaders.css" rel="stylesheet"/>
     <link href="/css/lib/modal-fx.min.css" rel="stylesheet"/>
     <link href="/css/lib/swiper.min.css" rel="stylesheet"/>
@@ -29,7 +29,7 @@
     <div class="loader" id="preloader"></div>
 </div>
 <div id="main-logged-in">
-    <header th:insert="fragments.html::header-donate"></header>
+    <header th:insert="~{fragments.html::header-donate}"></header>
     <div id="donate-top-margin"></div>
     <section class="container" id="main-container" style="margin-bottom: 52px;"></section>
 </div>
@@ -56,7 +56,7 @@
 
 <div id="user-profile-container"></div>
 
-<footer th:replace="fragments.html::navigation"></footer>
+<footer th:replace="~{fragments.html::navigation}"></footer>
 
 <script src="/sw.js"></script>
 <script src="/js/lib/fontawesome.all.js"></script>
