--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,8 +16,8 @@
 	<link rel="apple-touch-icon" href="/img/android-chrome-192x192.png">
 
 	<link rel="stylesheet" href="/css/lib/bulma.min.css" />
-	<th:block th:replace="fragments.html::bulma"></th:block>
-	<th:block th:replace="fragments.html::ui-design"></th:block>
+	<th:block th:replace="~{fragments.html::bulma}"></th:block>
+	<th:block th:replace="~{fragments.html::ui-design}"></th:block>
 	<link rel="stylesheet" href="/css/lib/bulma-collapsible.min.css" />
 	<link rel="stylesheet" href="/css/lib/modal-fx.min.css" />
 	<link rel="stylesheet" href="/css/lib/animate.min.css" />
@@ -48,7 +48,7 @@
 		<div class="loader" id="preloader"></div>
 	</div>
 	<div id="main">
-		<header th:replace="fragments.html::header-index"></header>
+		<header th:replace="~{fragments.html::header-index}"></header>
 		<div id="hero-gravity"></div>
 		
 		<section id="hero">
@@ -191,7 +191,7 @@
 				<img id="ios-pwa" src="/img/ios-pwa.webp" style="width: 100%">
 			</div>
 		</div>
-		<footer th:replace="fragments.html::footer"></footer>
+		<footer th:replace="~{fragments.html::footer}"></footer>
 	</div>
 
 	<script src="/sw.js"></script>
