--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,15 +13,15 @@
 	<link rel="stylesheet" href="/css/lib/bulma-collapsible.min.css" />
 	<link rel="stylesheet" href="/css/lib/modal-fx.min.css" />
 	<link rel="stylesheet" href="/css/lib/animate.min.css" />
-	<th:block th:replace="fragments.html::bulma"></th:block>
-	<th:block th:replace="fragments.html::ui-design"></th:block>
+	<th:block th:replace="~{fragments.html::bulma}"></th:block>
+	<th:block th:replace="~{fragments.html::ui-design}"></th:block>
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<title th:text="#{login.title}"></title>
 </head>
 
 <body>
 	<div id="main">
-		<header th:insert="fragments.html::header-logged-out"></header>
+		<header th:insert="~{fragments.html::header-logged-out}"></header>
 		<div class="section">
 
 			<div class="container container-narrow">
@@ -60,7 +60,7 @@
 												name="password">
 										</div>
 									</div>
-									<div th:replace="fragments.html::captcha"></div>
+									<div th:replace="~{fragments.html::captcha}"></div>
 									<div class="field">
 										<label class="checkbox"> <input type="checkbox" name="remember-me" checked> <span
 												th:text="#{login.remember}"></span>
@@ -102,7 +102,7 @@
 			</div>
 		</div>
 	</div>
-	<footer th:replace="fragments.html::footer"></footer>
+	<footer th:replace="~{fragments.html::footer}"></footer>
 
 	<script src="/sw.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
