--- a/src/main/resources/templates/tos.html
+++ b/src/main/resources/templates/tos.html
@@ -10,8 +10,8 @@
 	<link rel="manifest" href="/manifest/manifest.json">
 	
 	<link rel="stylesheet" href="/css/lib/bulma.min.css" />
-	<th:block th:replace="fragments.html::bulma"></th:block>
-	<th:block th:replace="fragments.html::ui-design"></th:block>
+	<th:block th:replace="~{fragments.html::bulma}"></th:block>
+	<th:block th:replace="~{fragments.html::ui-design}"></th:block>
 	<link rel="stylesheet" href="/css/lib/animate.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<link rel="stylesheet" href="/css/privacy.css" />
@@ -20,13 +20,13 @@
 <body>
 	<div id="main">
 
-		<header th:insert="fragments.html::header-logged-out"></header>
+		<header th:insert="~{fragments.html::header-logged-out}"></header>
 		<div class="section">
 			<div class="box" th:utext="${content}">
 			</div>
 		</div>
 	</div>
-	<footer th:replace="fragments.html::footer"></footer>
+	<footer th:replace="~{fragments.html::footer}"></footer>
 
 	<script src="/sw.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
