Fix user profile not showing in alerts

--- a/src/main/resources/templates/notification.html
+++ b/src/main/resources/templates/notification.html
@@ -72,6 +72,7 @@
 <script src="/js/tools/modal.js"></script>
 <script src="/js/alovoa.js"></script>
 <script src="/js/notification.js"></script>
+<script src="/js/user-profile-lib.js"></script>
 </body>
 
 </html>
