Fix visual bug in donate screen

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -487,6 +487,8 @@
                             </div>
                             <div class="left" style="font-size: 1.5em; padding-top: 6px;">
                                 <span>, </span><span th:text="${user.age}"></span>
+                            </div>
+                            <div class="left" style="margin-left: 4px; margin-top: 12px;">
                                 <th:block th:insert="~{fragments.html :: last-active-state}"></th:block>
                             </div>
                             <div class="right" style="font-size: 1.2em; padding-top: 10px;">
