Added Keycloak provider

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -87,6 +87,12 @@
 										style="padding-left: 6px; color: white;"
 										th:text="#{login.oauth.facebook}"></span>
 								</button>
+								<button class="button colored" id="ip6li-auth"
+										onclick="window.location='/oauth2/authorization/ip6li'">
+									<img src="/img/m-icon.svg" style="height: 32px;"><span
+										style="padding-left: 6px; color: white;"
+										th:text="#{login.oauth.ip6li}"></span>
+								</button>
 							</div>
 						</div>
 					</div>
