--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -60,12 +60,20 @@
 												name="password">
 										</div>
 									</div>
-									<div th:replace="~{fragments.html::captcha}"></div>
+
+									<div th:if="${captchaEnabled}">
+										<div th:replace="~{fragments.html::captcha}"></div>
+									</div>
+
 									<div class="field">
 										<label class="checkbox"> <input type="checkbox" name="remember-me" checked> <span
 												th:text="#{login.remember}"></span>
 										</label>
 									</div>
+
+
+
+
 									<button class="button colored is-link" th:text="#{submit}"></button>
 								</form>
 							</div>
@@ -89,7 +97,7 @@
 								</button>
 								<button class="button colored" id="ip6li-auth"
 										onclick="window.location='/oauth2/authorization/ip6li'">
-									<img src="/img/m-icon.svg" style="height: 32px;"><span
+									<img src="/img/ip6li-icon.png" style="height: 32px;"><span
 										style="padding-left: 6px; color: white;"
 										th:text="#{login.oauth.ip6li}"></span>
 								</button>
