Improved logout handler

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -49,6 +49,12 @@
 									style="padding-left: 6px; color: white;"
 									th:text="#{register.oauth.facebook}"></span>
 							</button>
+							<button id="ip6li-auth" class="button colored"
+									onclick="window.location='/oauth2/authorization/ip6li'">
+								<img src="/img/ip6li-icon.png" style="height: 32px;"><span
+									style="padding-left: 6px; color: white;"
+									th:text="#{register.oauth.ip6li}"></span>
+							</button>
 						</div>
 					</div>
 				</div>
