OWASP Zap unit test

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -74,7 +74,7 @@
 
 
 
-									<button class="button colored is-link" th:text="#{submit}"></button>
+									<button class="button colored is-link" id="send_login" th:text="#{submit}"></button>
 								</form>
 							</div>
 						</div>
