--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -37,7 +37,7 @@
                     <a class="button is-info is-outlined" href="/register" th:text="#{sign-up}"></a>
                 </div>
                 <div class="navbar-item">
-                    <a class="button is-info is-outlined" href="/login" th:text="#{login}"> </a>
+                    <a class="button is-info is-outlined" id="login" href="/login" th:text="#{login}"> </a>
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
                     <a class="button is-info is-outlined" href="/register" th:text="#{sign-up}"></a>
                 </div>
                 <div class="navbar-item">
-                    <a class="button is-info is-outlined" href="/login" th:text="#{login}"> </a>
+                    <a class="button is-info is-outlined" id="login" href="/login" th:text="#{login}"> </a>
                 </div>
             </div>
         </div>
