Added a custom stylesheet for local customizations

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -16,6 +16,7 @@
     <link href="/css/lib/animate.min.css" rel="stylesheet"/>
     <link href="/css/alovoa.css" rel="stylesheet"/>
     <link href="/css/privacy.css" rel="stylesheet"/>
+    <link href="/css/custom.css" rel="stylesheet" />
     <title th:text="#{admin.title}"></title>
 </head>
 
