--- a/src/main/resources/templates/delete-account.html
+++ b/src/main/resources/templates/delete-account.html
@@ -18,6 +18,7 @@
     <link href="/css/lib/css-loaders.css" rel="stylesheet"/>
     <link href="/css/lib/animate.min.css" rel="stylesheet"/>
     <link href="/css/alovoa.css" rel="stylesheet"/>
+    <link href="/css/custom.css" rel="stylesheet" />
     <title th:text="#{delete-account.title}"></title>
 </head>
 
