--- a/src/main/resources/templates/donate-list.html
+++ b/src/main/resources/templates/donate-list.html
@@ -16,6 +16,7 @@
 	<th:block th:replace="~{fragments.html::ui-design}"></th:block>
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<link rel="stylesheet" href="/css/donate-list.css" />
+        <link rel="stylesheet" href="/css/custom.css" />
 	<title th:text="#{donate.title}"></title>
 </head>
 
