--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -12,6 +12,7 @@
 
 	<link rel="stylesheet" href="/css/lib/bulma.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
+	<link rel="stylesheet" href="/css/custom.css" />
 	<title>Error</title>
 </head>
 
