--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -14,6 +14,7 @@
 	<th:block th:replace="~{fragments.html::bulma}"></th:block>
 	<th:block th:replace="~{fragments.html::ui-design}"></th:block>
 	<link rel="stylesheet" href="/css/alovoa.css" />
+	<link rel="stylesheet" href="/css/custom.css" />
 	<title th:text="#{faq.title}"></title>
 </head>
 
