--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,6 +24,7 @@
 	<link rel="stylesheet" href="/css/lib/css-loaders.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<link rel="stylesheet" href="/css/index.css" />
+	<link rel="stylesheet" href="/css/custom.css" />
 
 	<link rel="alternate" hreflang="en" href="/?lang=en" />
 	<link rel="alternate" hreflang="de" href="/?lang=de" />
