--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -20,6 +20,7 @@
     <link href="/css/user-profile.css" rel="stylesheet"/>
     <link href="/css/alovoa.css" rel="stylesheet"/>
     <link href="/css/notification.css" rel="stylesheet"/>
+    <link href="/css/custom.css" rel="stylesheet"/>
     <title th:text="#{message.title}"></title>
 </head>
 
