--- a/src/main/resources/templates/password-change.html
+++ b/src/main/resources/templates/password-change.html
@@ -14,6 +14,7 @@
 	<th:block th:replace="~{fragments.html::ui-design}"></th:block>
 	<link rel="stylesheet" href="/css/lib/animate.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
+	<link rel="stylesheet" href="/css/custom.css" />
 	<title th:text="#{password-change.title}"></title>
 </head>
 <body>
