--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="/css/lib/animate.min.css"/>
     <link rel="stylesheet" href="/css/alovoa.css"/>
     <link rel="stylesheet" href="/css/profile.css"/>
+    <link rel="stylesheet" href="/css/custom.css"/>
 
     <title th:text="#{profile.title}"></title>
 </head>
