--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<link rel="stylesheet" href="/css/user-profile.css" />
 	<link rel="stylesheet" href="/css/search.css" />
+	<link rel="stylesheet" href="/css/custom.css" />
 	<title th:text="#{search.title}"></title>
 </head>
 
