--- a/src/main/resources/templates/admin-verification.html
+++ b/src/main/resources/templates/admin-verification.html
@@ -15,6 +15,7 @@
     <th:block th:replace="~{fragments.html::ui-design}"></th:block>
     <link href="/css/lib/animate.min.css" rel="stylesheet"/>
     <link href="/css/alovoa.css" rel="stylesheet"/>
+    <link href="/css/custom.css" rel="stylesheet" />
     <title th:text="#{admin.title}"></title>
 
 
