--- a/src/main/resources/templates/disliked-users.html
+++ b/src/main/resources/templates/disliked-users.html
@@ -21,6 +21,7 @@
     <link href="/css/alovoa.css" rel="stylesheet"/>
     <link href="/css/user-profile.css" rel="stylesheet"/>
     <link href="/css/notification.css" rel="stylesheet"/>
+    <link href="/css/custom.css" rel="stylesheet" />
     <title th:text="#{disliked-users.title}"></title>
 </head>
 
