--- a/src/main/resources/templates/donate.html
+++ b/src/main/resources/templates/donate.html
@@ -21,6 +21,7 @@
     <link href="/css/user-profile.css" rel="stylesheet"/>
     <link href="/css/search.css" rel="stylesheet"/>
     <link href="/css/donate.css" rel="stylesheet"/>
+    <link href="/css/custom.css" rel="stylesheet" />
     <title th:text="#{donate.title}"></title>
 </head>
 
