--- a/src/main/resources/templates/liked-users.html
+++ b/src/main/resources/templates/liked-users.html
@@ -19,6 +19,7 @@
     <link href="/css/alovoa.css" rel="stylesheet"/>
     <link href="/css/user-profile.css" rel="stylesheet"/>
     <link href="/css/notification.css" rel="stylesheet"/>
+    <link href="/css/custom.css" rel="stylesheet"/>
     <title th:text="#{liked-users.title}"></title>
 </head>
 
