--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,6 +16,7 @@
 	<th:block th:replace="~{fragments.html::bulma}"></th:block>
 	<th:block th:replace="~{fragments.html::ui-design}"></th:block>
 	<link rel="stylesheet" href="/css/alovoa.css" />
+	<link rel="stylesheet" href="/css/custom.css" />
 	<title th:text="#{login.title}"></title>
 </head>
 
