--- a/src/main/resources/templates/privacy.html
+++ b/src/main/resources/templates/privacy.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="/css/lib/animate.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<link rel="stylesheet" href="/css/privacy.css" />
+	<link rel="stylesheet" href="/css/custom.css" />
 	<title th:text="#{privacy.title}"></title>
 </head>
 <body>
