--- a/src/main/resources/templates/profile-onboarding.html
+++ b/src/main/resources/templates/profile-onboarding.html
@@ -20,6 +20,7 @@
 	<link rel="stylesheet" href="/css/lib/animate.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<link rel="stylesheet" href="/css/profile-onboarding.css" />
+	<link rel="stylesheet" href="/css/custom.css" />
 	<title th:text="#{profile.title}"></title>
 
 </head>
