--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" href="/css/lib/modal-fx.min.css" />
 	<link rel="stylesheet" href="/css/lib/animate.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
+	<link rel="stylesheet" href="/css/custom.css" />
 	<title th:text="#{register.title}"></title>
 </head>
 
