--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -19,6 +19,7 @@
     <link href="/css/lib/animate.min.css" rel="stylesheet"/>
     <link href="/css/alovoa.css" rel="stylesheet"/>
     <link href="/css/user-profile.css" rel="stylesheet"/>
+    <link href="/css/custom.css" rel="stylesheet"/>
     <title th:value="${user.firstName}"></title>
 </head>
 
