Add a target="_blank" to external links in message detail markup

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -453,13 +453,13 @@
     <div th:each="message : ${messages}" style="display: inline-block; width: 100%;">
 
         <div th:if="${message.from && message.allowedFormatting}" class="chat-message left"
-             th:utext='|<a href="${message.content}">${message.content}</a>|'></div>
+             th:utext='|<a href="${message.content}" target="_blank">${message.content}</a>|'></div>
         <div th:if="${message.from && !message.allowedFormatting}" class="chat-message left"
              th:text="${message.content}"></div>
 
         <div th:if="${!message.from  && message.allowedFormatting}"
              class="chat-message right notification is-primary"
-             th:utext='|<a href="${message.content}">${message.content}</a>|'></div>
+             th:utext='|<a href="${message.content}" target="_blank">${message.content}</a>|'></div>
         <div th:if="${!message.from  && !message.allowedFormatting}"
              class="chat-message right notification is-primary" th:text="${message.content}"></div>
 
