Added Hungarian to language selector

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -255,6 +255,9 @@
                 <button class="button colored is-primary" value="?lang=tr"
                         onclick="onChangeLocal(this.value)">Türkçe*
                 </button>
+                <button class="button colored is-primary" value="?lang=hu"
+                        onclick="onChangeLocal(this.value)">Magyar*
+                </button>
                 <div style="color: white"><span style="float:right; margin-right: 4px;">* beta</span></div>
             </div>
         </div>
